blog/static/styles.css
/* || Base Styles */

html {
    font-family: "Roboto", sans-serif;
}

*, *::before, *::after {
    box-sizing: border-box;
}

body {
    margin: 0;
    min-width: 20rem;
}

a {
    text-decoration: none;
    color: #000;
}

button, input, select {
    font-family: "Roboto", sans-serif;
}

h1 {
    font-size: 3rem;
}

h2 {
    margin: 1rem 0;
    font-size: 1.25rem;
}

hr {
    border-top: none;
    border-color: #acacac;
    margin: 0;
}

/* || Banner */

.banner {
    background-image: url('sky-royalty-free.png');
    background-size: cover;
    background-position: top;
    background-attachment: fixed;
    height: 20rem;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 0;
}

.overlay-text {
    margin: 0;
    z-index: 1;
    line-height: 1.66;
}

.overlay-text.lower {
    font-size: 1.5rem;
}

.nav-header {
    position: fixed;
    display: flex;
    align-items: center;
    height: 4rem;
    width: 100%;
    z-index: 2;
}

.header-menu {
    box-sizing: content-box;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    position: absolute;
    top: 0;
    right: -100%;
    width: 24%;
    min-width: 15rem;
    max-height: 90vh;
    padding: 1rem 2rem;
    background-color: #fff;
    border: 1px solid #acacac;
    opacity: 0;
    overflow-y: auto;
    z-index: 3;
    transition: opacity 0.1s cubic-bezier(0, 0.47, 0.745, 0.715), right 0.2s cubic-bezier(1, 0, 1, 1);
}

.menu-button {
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    top: auto;
    right: 0;
    width: 3rem;
    height: 66%;
    margin: 0;
    padding: 0.5rem;
    border: 1px solid #fff;
    border-radius: 0.33rem;
    cursor: pointer;
}

.menu-button div {
    width: 100%;
    height: 0.33rem;
    background-color: #fff;
}

.menu-button.sticky {
    background-color: #acacac;
}

.header-menu.active {
    right: 3rem;
    opacity: 1;
    transition: opacity 0.4s cubic-bezier(0.47, 0, 0.745, 0.715), right 0.3s cubic-bezier(0, 0, 0, 1);
}

.menu-button.active {
    justify-content: initial;
}

.menu-button.active div:nth-child(1) {
    transform: translate(0, 200%) rotate(45deg);
}

.menu-button.active div:nth-child(2) {
    transform: translate(0, 100%) rotate(-45deg);
}

.menu-button.active div:nth-child(3) {
    opacity: 0;
}

/* || Content */

.wrapper {
    padding-top: 2.5rem;
}

.content {
    display: flex;
    margin: 0 auto;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    max-width: 75rem;
    min-height: 60rem;
    padding: 1rem;
    border: 1px solid #acacac;
    border-radius: 2rem;
}

/* || Main Body */

.main-body {
    width: 100%;
}

.post-title {
    font-size: 1.75rem;
}

.pub-date {
    font-size: 1rem;
    font-weight: normal;
    color: #acacac;
}

.post-body {
    padding: 1rem 0;
}

.result-title {
    font-size: 2rem;
    font-weight: bold;
    margin-top: 1rem;
}

/* || Nav Panel */

.sidebar {
    display: none;
    flex-direction: column;
    align-items: flex-start;
    width: 30%;
}

form {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 1rem;
}

form, form > div {
    width: 100%;
    height: 2rem;
}

form input {
    width: 100%;
    height: 100%;
    border-radius: 0;
    border-color: #acacac;
}

form input:focus {
    outline: 0;
    border-color: #000; 
}

form button {
    width: 8rem;
    border: 0;
    padding: 0;
    height: 100%;
    color: #fff;
    background-color: #292929;
    text-transform: uppercase;
    cursor: pointer;
}

form button:hover, form button:focus {
    background-color: #3e3e3e;
}

/* || Post Tree */

.post-tree {
    width: auto;
    margin: 0;
}

.sidebar h2 {
    padding: 0.5rem 0;
    border-bottom: 1px solid #acacac;
    width: 100%;
}

ul {
    list-style-type: none;
    margin: 0;
}

li {
    margin: 0.275rem 0;
    cursor: pointer;
}

li::before {
    content: '\25B6';
    margin-right: 0.5rem;
}

.years {
    padding: 0;
}

.year li {
    margin-bottom: 0.5rem;
}

.year.reveal::before, .month.reveal::before {
    content: '\25BC';
}

.dates li::before {
    content: none;
}

/* || Page Navigation */

.nav-cover {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 10rem;
    border-top: 1px solid #acacac;
}

.nav-links {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    flex-direction: column;
    margin-top: 0;
    width: 100%;
    height: 100%;
    padding: 1rem;
}

.previous-set, .next-set, .page-count {
    display: flex;
    align-items: center;
    height: 100%;
}

.previous-set {
    justify-content: flex-start;
}

.page-count {
    justify-content: center;
}

.next-set {
    justify-content: flex-end;
}

.post-dir {
    font-weight: bold;
    text-transform: uppercase;
}

.title-preview {
    max-width: 10rem;
    overflow: hidden;
    text-overflow: ellipsis;
}

.link-next, .link-previous {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

/* || Footer */

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 4rem;
    background-color: #f1f1f1;
}

footer, .nav-cover {
    width: 100%;
}

@media screen and (min-width: 30rem) {
    .overlay-text.lower {
        font-size: 2rem;
        line-height: 1;
    }

    .nav-links {
        flex-direction: row;
        align-items: center;
        width: 28rem;
    }

    .previous-set, .page-count, .next-set {
        width: 100%;
    }

    .nav-cover {
        height: 5rem;
    }

    .link-next {
        align-items: flex-end;
    }

}

@media screen and (min-width: 37.5rem) {
    .content {
        width: 90%;
    }
}

@media screen and (min-width: 48rem) {
    .nav-header {
        height: 5rem;
    }

    .content {
        width: 85%;
    }

    .main-body {
        width: 63%;
    }

    .sidebar {
        display: flex;
    }

    .nav-links {
        width: 30rem;
    }

    .menu-button {
        margin: 0 1rem;
        width: 4rem;
    }

    .menu-button div {
        height: 0.5rem;
    }

    .header-menu.active {
        right: 5rem;
    }

    footer {
        height: 5rem;
    }

    .menu-button.active div:nth-child(1) {
        transform: translate(0, 175%) rotate(45deg);
    }
    
    .menu-button.active div:nth-child(2) {
        transform: translate(0, 75%) rotate(-45deg);
    }
}

@media screen and (min-width: 64rem) {
    .content {
        width: 80%;
    }
}

